messaggio lista terminata

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="root">
         <input type="text" placeholder="Inserisci qui un nuovo task" v-model="newTask" @keyDown.enter="addNewItem">
         <button @click="addNewItem()">Aggiungi alla lista</button>
-        <ol>
+        <ol v-if="toDoList.length > 0">
             <li v-for="(item, index) in toDoList">
                  {{ item.testo }} 
                 <i class="fas fa-times-circle"
@@ -21,6 +21,7 @@
                 ></i>
             </li>
         </ol>
+        <h2 v-else="toDoList.length == 0">Bravo hai portato a termine tutti i compiti della tua lista!</h2>
     </div>
 
 
